adding controller and DO for Car

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 #set logging level because of bug in swagger-models dependency
